JBQA-6819 The forkMode=none is removed from coverage profile surefire config, so that jacoco agent is attached to command line properly.